@startuml trendyol_diagram

entity "Users" as users {
  *user_id : UUID
  --
  email : String
  password_hash : String
  password_salt : String
  first_name : String
  last_name : String
  phone : String
  is_active : Boolean
  last_login : DateTime
  created_at : DateTime
  updated_at : DateTime
  is_deleted : Boolean
  deleted_at : DateTime
}

entity "Contact Info" as contact_info {
  *contact_id : UUID
  --
  user_id : UUID
  contact_type : String
  contact_value : String
  is_primary : Boolean
}

entity "Saved Carts" as cart {
  *cart_id : UUID
  --
  user_id : UUID
  cart_items : JSON
  created_at : DateTime
  updated_at : DateTime
}

entity "User Roles" as user_roles {
  *role_id : UUID
  --
  user_id : UUID
  role_name : String
  created_at : DateTime
}

entity "Addresses" as addresses {
  *address_id : UUID
  --
  user_id : UUID
  address_type : String
  address_line1 : String
  address_line2 : String
  city : String
  state : String
  postal_code : String
  country_code : String
  is_default : Boolean
}

entity "Preferences" as preferences {
  *preference_id : UUID
  --
  user_id : UUID
  default_language : String
  default_currency : String
  notification_settings : JSON
  privacy_settings : JSON
}

entity "User Security" as user_security {
  *security_id : UUID
  --
  user_id : UUID
  two_factor_enabled : Boolean
  security_questions : JSON
}

entity "Languages" as languages {
  *language_code : String
  --
  language_name : String
  is_default : Boolean
}

entity "Saved Payments" as saved_payments {
  *saved_payment_id : UUID
  --
  user_id : UUID
  payment_method_id : UUID
  nickname : String
  is_active : Boolean
}

entity "Categories" as categories {
  *category_id : UUID
  --
  parent_id : UUID
  name : String
  slug : String
  level : Integer
  path : String
  is_active : Boolean
}

entity "Brands" as brands {
  *brand_id : UUID
  --
  name : String
  slug : String
  description : String
  logo_url : String
  website_url : String
  is_active : Boolean
}

entity "Products" as products {
  *product_id : UUID
  --
  seller_id : UUID
  category_id : UUID
  brand_id : UUID
  name : String
  slug : String
  description : String
  is_active : Boolean
  created_at : DateTime
  updated_at : DateTime
}

entity "Product Specifications" as product_specifications {
  *specification_id : UUID
  --
  product_id : UUID
  key : String
  value : String
  created_at : DateTime
}

entity "Product Images" as product_images {
  *image_id : UUID
  --
  product_id : UUID
  url : String
  alt_text : String
  sort_order : Integer
  is_primary : Boolean
  created_at : DateTime
}

entity "Product Variants" as product_variants {
  *variant_id : UUID
  --
  product_id : UUID
  sku : String
  name : String
  attributes : JSON
  is_active : Boolean
  created_at : DateTime
  updated_at : DateTime
}

entity "Warehouses" as warehouses {
  *warehouse_id : UUID
  --
  name : String
  code : String
  address : String
  is_active : Boolean
  created_at : DateTime
}

entity "Inventory" as inventory {
  *inventory_id : UUID
  --
  variant_id : UUID
  warehouse_id : UUID
  quantity : Integer
  reserved_quantity : Integer
  reorder_point : Integer
  updated_at : DateTime
}

entity "Reviews" as reviews {
  *review_id : UUID
  --
  product_id : UUID
  user_id : UUID
  rating : Integer
  comment : String
  created_at : DateTime
}

entity "Inventory Alerts" as inventory_alerts {
  *alert_id : UUID
  --
  variant_id : UUID
  warehouse_id : UUID
  alert_type : String
  alert_details : String
  created_at : DateTime
}

entity "Orders" as orders {
  *order_id : UUID
  --
  user_id : UUID
  order_number : String
  order_date : DateTime
  status : String
  currency_code : String
  subtotal : Decimal
  shipping_cost : Decimal
  tax_amount : Decimal
  total_amount : Decimal
  created_at : DateTime
  updated_at : DateTime
}

entity "Order Items" as order_items {
  *order_item_id : UUID
  --
  order_id : UUID
  product_id : UUID
  quantity : Integer
  unit_price : Decimal
  total_price : Decimal
}

entity "Order History" as order_history {
  *history_id : UUID
  --
  order_id : UUID
  status : String
  comment : String
  created_by : UUID
  created_at : DateTime
}

entity "Payment Methods" as payment_methods {
  *payment_method_id : UUID
  --
  user_id : UUID
  type : String
  provider : String
  account_number : String
  expiry_date : Date
  is_default : Boolean
  is_active : Boolean
}

entity "Transactions" as transactions {
  *transaction_id : UUID
  --
  order_id : UUID
  payment_method_id : UUID
  amount : Decimal
  currency_code : String
  status : String
  provider_transaction_id : String
  created_at : DateTime
}

entity "Installment Plans" as installment_plans {
  *plan_id : UUID
  --
  payment_method_id : UUID
  number_of_installments : Integer
  interest_rate : Decimal
  created_at : DateTime
  updated_at : DateTime
}

entity "Carriers" as carriers {
  *carrier_id : UUID
  --
  name : String
  tracking_url : String
  is_active : Boolean
}

entity "Shipping Methods" as shipping_methods {
  *method_id : UUID
  --
  carrier_id : UUID
  name : String
  delivery_time : String
  cost : Decimal
  is_active : Boolean
}

entity "Shipments" as shipments {
  *shipment_id : UUID
  --
  order_id : UUID
  carrier_id : UUID
  method_id : UUID
  tracking_number : String
  status : String
  shipped_at : DateTime
  delivered_at : DateTime
}

entity "User Activity" as user_activity {
  *activity_id : UUID
  --
  user_id : UUID
  activity_type : String
  activity_details : JSON
  created_at : DateTime
}

entity "Product Views" as product_views {
  *view_id : UUID
  --
  user_id : UUID
  product_id : UUID
  viewed_at : DateTime
}

entity "Sales Performance" as sales_performance {
  *performance_id : UUID
  --
  product_id : UUID
  category_id : UUID
  sales_date : Date
  units_sold : Integer
  total_revenue : Decimal
  created_at : DateTime
}

entity "Sellers" as sellers {
  *seller_id : UUID
  --
  name : String
  email : String
  phone : String
  address : String
  is_active : Boolean
  created_at : DateTime
  updated_at : DateTime
}

entity "Seller Ratings" as seller_ratings {
  *rating_id : UUID
  --
  seller_id : UUID
  user_id : UUID
  rating : Integer
  comment : String
  created_at : DateTime
}

entity "Listings" as listings {
  *listing_id : UUID
  --
  seller_id : UUID
  product_id : UUID
  price : Decimal
  quantity : Integer
  is_active : Boolean
  created_at : DateTime
  updated_at : DateTime
}

entity "Promotions" as promotions {
  *promotion_id : UUID
  --
  name : String
  description : String
  start_date : Date
  end_date : Date
  discount_type : String
  discount_value : Decimal
  is_active : Boolean
}

entity "Promotion Products" as promotion_products {
  *promotion_product_id : UUID
  --
  promotion_id : UUID
  product_id : UUID
  created_at : DateTime
}

entity "Promotion Usage" as promotion_usage {
  *usage_id : UUID
  --
  promotion_id : UUID
  user_id : UUID
  order_id : UUID
  used_at : DateTime
}

entity "Restaurants" as restaurants {
  *restaurant_id : UUID
  --
  name : String
  address : String
  phone : String
  is_active : Boolean
  created_at : DateTime
  updated_at : DateTime
}

entity "Menus" as menus {
  *menu_id : UUID
  --
  restaurant_id : UUID
  name : String
  description : String
  price : Decimal
  is_active : Boolean
}

entity "Food Orders" as food_orders {
  *order_id : UUID
  --
  user_id : UUID
  restaurant_id : UUID
  order_date : DateTime
  status : String
  total_amount : Decimal
  created_at : DateTime
  updated_at : DateTime
}

entity "Stores" as stores {
  *store_id : UUID
  --
  name : String
  address : String
  phone : String
  is_active : Boolean
  created_at : DateTime
  updated_at : DateTime
}

entity "Market Products" as market_products {
  *product_id : UUID
  --
  store_id : UUID
  name : String
  slug : String
  description : String
  price : Decimal
  is_active : Boolean
  created_at : DateTime
  updated_at : DateTime
}

entity "Market Orders" as market_orders {
  *order_id : UUID
  --
  user_id : UUID
  store_id : UUID
  order_date : DateTime
  status : String
  total_amount : Decimal
  created_at : DateTime
  updated_at : DateTime
}

users ||--o{ contact_info
users ||--o{ cart
users ||--o{ user_roles
users ||--o{ addresses
users ||--o{ preferences
users ||--o{ user_security
users ||--o{ saved_payments
users ||--o{ user_activity
users ||--o{ reviews
users ||--o{ orders
users ||--o{ transactions
users ||--o{ seller_ratings
users ||--o{ promotion_usage
users ||--o{ food_orders
users ||--o{ market_orders

products ||--o{ product_specifications
products ||--o{ product_images
products ||--o{ product_variants
products ||--o{ inventory
products ||--o{ reviews
products ||--o{ order_items
products ||--o{ product_views
products ||--o{ sales_performance
products ||--o{ listings
products ||--o{ promotion_products

orders ||--o{ order_items
orders ||--o{ order_history
orders ||--o{ shipments
orders ||--o{ transactions
orders ||--o{ promotion_usage

sellers ||--o{ listings
sellers ||--o{ seller_ratings

categories ||--o{ products
brands ||--o{ products
warehouses ||--o{ inventory
warehouses ||--o{ inventory_alerts

carriers ||--o{ shipping_methods
shipping_methods ||--o{ shipments

payment_methods ||--o{ transactions
payment_methods ||--o{ installment_plans

promotions ||--o{ promotion_products
promotions ||--o{ promotion_usage

restaurants ||--o{ menus
restaurants ||--o{ food_orders

stores ||--o{ market_products
stores ||--o{ market_orders

@enduml
